--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #stage {
-    border: 3px solid navy;
+    border: 5px dotted navy;
+    border-radius: 10px;
     height: 300px;
     width: 600px;
     font-family: 'Gaegu', cursive;
@@ -13,15 +14,45 @@
     top: 35px;
   }
   
-  circle {
-    position: absolute;
-    fill: violet;
-    animation: bounce 5s infinite;
-  }
-  
   p {
     position: relative;
     color: #a2a29f;
     top: 200px;
     left: 150px;
+  }
+  
+  #holiday {
+    margin: 0 0 0 0;
+  }
+  
+  #date {
+    font-size: .5em;
+    left: 250px;
+  }
+  
+  #dot {
+    position: absolute;
+    fill: violet;
+  }
+  
+  a:link {
+    color:#a2a29f;
+    text-decoration: none;
+  }
+  
+  #stage:hover #dot {
+    animation: slowfall 3s;
+    
+  }
+  
+  @keyframes slowfall {
+    
+    0% {
+      transform: scale(.5) skewX(50deg);
+    }
+   
+    100% {
+      transform: scale(1);
+    }
+    
   }
